<resources>
    <string name="app_name">SpotifyWrapped</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="click_to_login">Click to login</string>
    <string name="click_to_register">Click to register</string>
    <string name="logout">Logout</string>
    <string name="link_spotify">Link Spotify</string>
    <string name="title_activity_friends">Friends</string>
    <string name="friends_tab_friends">Friends</string>
    <string name="friends_tab_requests">Requests</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_profile">My Profile</string>
    <string name="friends_list">Friends List</string>
    <string name="delete_account">Delete Account</string>
    <string name="friends">Friends</string>
    <string name="back">Back</string>
    <string name="update_account_details">Update Account Details</string>
</resources>