<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity"
    android:orientation="vertical"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back" />
    </LinearLayout>

    <TextView
        android:id="@+id/profile_name_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="TextView"
        android:paddingTop="30dp"
        android:textSize="40sp"
        android:textStyle="bold"
        />
    <TextView
        android:id="@+id/friend_code_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="Friend Code:"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/profile_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        tools:srcCompat="@tools:sample/avatars" />


    <Button
        android:id="@+id/link_account_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/link_spotify"/>

    <Button
        android:id="@+id/logout_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout"/>

    <Button
        android:id="@+id/update_account_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update_account_details"/>

    <Button
        android:id="@+id/delete_account_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_account"/>


</LinearLayout>